--- a/Opgave23/MainWindow.xaml
+++ b/Opgave23/MainWindow.xaml
@@ -43,10 +43,10 @@
         <Button x:Name="btnName" 
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Top" 
-                Margin="0,277,0,0" 
+                Margin="0,276,0,0" 
                 Click="btnName_Click">
             klik når du har skrevet dit navn
         </Button>
-        <Label x:Name="lblName" HorizontalAlignment="Center" VerticalAlignment="Top" MinHeight="50" MinWidth="50" Margin="0,315,0,0"/>
+        <Label x:Name="lblName" HorizontalAlignment="Left" VerticalAlignment="Top" MinHeight="50" MinWidth="50" Margin="372,312,0,0"/>
     </Grid>
 </Window>
