--- a/Opgave26/MainWindow.xaml
+++ b/Opgave26/MainWindow.xaml
@@ -10,7 +10,7 @@
         <TextBlock x:Name="tblNameNum" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30, 50, 0, 0" Text="Number of hero names 1 to 10:"/>
         <TextBox x:Name="tbxNameNum" MinHeight="20" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="220, 50, 0, 0" PreviewTextInput="NumericOnly" DataObject.Pasting="TextBoxPastingNumbers"/>
         <Label x:Name="lblNotValid" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="170,10,0,0"/>
-        <ListBox x:Name="lbxShowNames" MinHeight="300" Width="300" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="330,50,0,0"/>
+        <ListBox x:Name="lbxShowNames" Height="300" Width="300" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="330,50,0,0"/>
         <Button x:Name="btnFemaleNames" Width="150"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,125,0,0" Click="btnFemaleNames_Click">
             Generate Female Names
         </Button>
@@ -20,7 +20,9 @@
         <Button x:Name="btnClearNames" Width="150" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120, 195, 0, 0" Click="btnClearNames_Click">
             Clear Names
         </Button>
-        <Button x:Name="btnSaveNames" Width="80" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="350,370,0,0" Click="btnSaveNames_Click">Save Names</Button>
+        <Button x:Name="btnSaveNames" Width="80" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="350,370,0,0" Click="btnSaveNames_Click">
+            Save Names
+        </Button>
 
 
     </Grid>
